2008-09-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* TODO:
	Updated TODO

2008-09-14  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (get_decreased_gradient_shades):
	Fixed a bug of the gradients introduced in rev 65 :)

2008-09-13  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/animation.c:
	* src/animation.h:
	* src/cairo-support.c (get_decreased_gradient_shades):
	* src/cairo-support.h:
	* src/murrine_draw.c (murrine_draw_button),
	(murrine_draw_progressbar_fill), (murrine_draw_menubar),
	(murrine_draw_tab), (murrine_draw_list_view_header),
	(murrine_draw_menuitem), (murrine_draw_scrollbar_stepper),
	(murrine_draw_scrollbar_slider), (murrine_draw_tooltip):
	* src/murrine_draw.h:
	* src/murrine_draw_rgba.c (murrine_rgba_draw_button),
	(murrine_rgba_draw_entry), (murrine_rgba_draw_progressbar_fill),
	(murrine_rgba_draw_menubar), (murrine_rgba_draw_tab),
	(murrine_rgba_draw_scrollbar_stepper),
	(murrine_rgba_draw_scrollbar_slider), (murrine_rgba_draw_tooltip):
	* src/murrine_rc_style.c:
	* src/murrine_rc_style.h:
	* src/murrine_style.c:
	* src/murrine_theme_main.c:
	* src/murrine_types.h:
	Less code to do the same thing ;)

2008-09-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* schema/murrine.xml.in.in:
	* src/murrine_rc_style.c (murrine_rc_style_init),
	(theme_parse_profile), (murrine_rc_style_parse),
	(murrine_rc_style_merge):
	* src/murrine_rc_style.h:
	* src/murrine_style.c (murrine_set_widget_parameters),
	(murrine_style_draw_vline), (murrine_style_draw_hline),
	(murrine_style_init_from_rc), (murrine_style_copy),
	(murrine_style_class_init):
	* src/murrine_style.h:
	* src/murrine_types.h:
	Renamed "style" to "profile", since it reflects what this option
	does: loading a profile for the style.

2008-09-12  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_highlight_and_shade),
	(murrine_draw_frame):
	* src/murrine_draw_rgba.c (murrine_draw_highlight_and_shade),
	(murrine_rgba_draw_frame):