@@ -1,3 +1,8 @@
+2008-09-26  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_style.c (murrine_style_draw_box):
+	Fixed a leak and a bug for rtl (right to left) progressbar's orientation
+
 2008-09-17  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* TODO:
